// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip Should render component with tooltip after mouse over 1`] = `
<span
  className="workflow-tooltip"
  onMouseLeave={[Function]}
>
  <TooltipBase
    position="right"
    title="Tooltip Message"
    visible={true}
    width="200"
  />
  <span
    className="tooltip-trigger"
    onMouseOver={[Function]}
  >
    Target
  </span>
</span>
`;

exports[`Tooltip Should render component with tooltip markup 1`] = `
<span
  className="workflow-tooltip"
  onMouseLeave={[Function]}
>
  <TooltipBase
    position="top"
    title="Tooltip Message"
    visible={true}
    width="200"
  />
  <span
    className="tooltip-trigger"
    onMouseOver={[Function]}
  >
    Target
  </span>
</span>
`;

exports[`Tooltip Should render component with tooltip with bottom position 1`] = `
<div
  class="tooltip clay-tooltip-bottom workflow-tooltip-bottom show"
  style="width:200px"
>
  <div
    class="arrow workflow-tooltip-arrow"
  />
  <div
    class="tooltip-inner"
  >
    <div>
      Tooltip Message
    </div>
  </div>
</div>
`;

exports[`Tooltip Should render component with tooltip with left position 1`] = `
<div
  class="tooltip clay-tooltip-right workflow-tooltip-right show"
  style="width:200px"
>
  <div
    class="arrow workflow-tooltip-arrow"
  />
  <div
    class="tooltip-inner"
  >
    <div>
      Tooltip Message
    </div>
  </div>
</div>
`;

exports[`Tooltip Should render component with tooltip with right position 1`] = `
<div
  class="tooltip clay-tooltip-right workflow-tooltip-right show"
  style="width:200px"
>
  <div
    class="arrow workflow-tooltip-arrow"
  />
  <div
    class="tooltip-inner"
  >
    <div>
      Tooltip Message
    </div>
  </div>
</div>
`;

exports[`Tooltip Should render component with tooltip with top position 1`] = `
<div
  class="tooltip clay-tooltip-top workflow-tooltip-top show"
  style="width:200px"
>
  <div
    class="arrow workflow-tooltip-arrow"
  />
  <div
    class="tooltip-inner"
  >
    <div>
      Tooltip Message
    </div>
  </div>
</div>
`;

exports[`Tooltip Should render component without tooltip after mouse leave 1`] = `
<span
  className="workflow-tooltip"
  onMouseLeave={[Function]}
>
  <span
    className="tooltip-trigger"
    onMouseOver={[Function]}
  >
    Target
  </span>
</span>
`;

exports[`Tooltip Should render component without tooltip markup 1`] = `
<span
  className="workflow-tooltip"
  onMouseLeave={[Function]}
>
  <span
    className="tooltip-trigger"
    onMouseOver={[Function]}
  >
    Target
  </span>
</span>
`;
